--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -205,53 +205,53 @@ nav a i {
   visibility: visible;
   background-color: #fff;
 }
-/* line 155, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 .info .spacer {
   height: 10%;
 }
-/* line 159, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 .info .container {
   position: static;
   margin: 0 auto;
 }
 @media screen and (max-width: 760px) {
-  /* line 159, ../sass/screen.scss */
+  /* line 161, ../sass/screen.scss */
   .info .container {
     width: 75%;
   }
 }
-/* line 165, ../sass/screen.scss */
+/* line 167, ../sass/screen.scss */
 .info .container h1, .info .container h2, .info .container p {
   margin: 0 auto 2% auto;
   width: 70%;
 }
-/* line 169, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 .info .container h1 {
   font-size: 1.5em;
 }
-/* line 172, ../sass/screen.scss */
+/* line 174, ../sass/screen.scss */
 .info .container h2 {
   font-size: 1em;
 }
-/* line 175, ../sass/screen.scss */
+/* line 177, ../sass/screen.scss */
 .info .container p {
   font-size: 1.3em;
   line-height: 1.3em;
   font-weight: 400;
 }
-/* line 180, ../sass/screen.scss */
+/* line 182, ../sass/screen.scss */
 .info .container .footer {
   font-size: 0.7em;
 }
-/* line 182, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .info .container .footer a {
   text-decoration: none;
 }
-/* line 184, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 .info .container .footer a:hover {
   text-decoration: underline;
 }
-/* line 188, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 .info .container .footer a img {
   height: 20px;
   vertical-align: middle;
@@ -259,7 +259,7 @@ nav a i {
   margin-bottom: 1px;
 }
 
-/* line 205, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
@@ -267,11 +267,11 @@ body {
   font-weight: 400;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-device-pixel-ratio: 1.5), screen and (max-width: 760px) {
-  /* line 205, ../sass/screen.scss */
+  /* line 207, ../sass/screen.scss */
   body {
     font-size: 10px;
   }
-  /* line 215, ../sass/screen.scss */
+  /* line 217, ../sass/screen.scss */
   body nav {
     font-size: 200%;
     /* 
@@ -286,54 +286,54 @@ body {
   }
 }
 
-/* line 234, ../sass/screen.scss */
+/* line 236, ../sass/screen.scss */
 .header h1 {
   font-size: 2.5em;
 }
-/* line 236, ../sass/screen.scss */
+/* line 238, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 243, ../sass/screen.scss */
+/* line 245, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 249, ../sass/screen.scss */
+/* line 251, ../sass/screen.scss */
 .dark .container .copy p {
   max-width: 65%;
   font-size: 2.5em;
 }
 
-/* line 254, ../sass/screen.scss */
+/* line 256, ../sass/screen.scss */
 .panel p, .m-b p, .marlene p {
   font-size: 2em;
   line-height: 1.2em;
 }
-/* line 257, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .panel p i, .m-b p i, .marlene p i {
   font-size: 0.8em;
 }
 
-/* line 262, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 267, ../sass/screen.scss */
+/* line 269, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 274, ../sass/screen.scss */
+/* line 276, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 278, ../sass/screen.scss */
+/* line 280, ../sass/screen.scss */
 .dark {
   background: #191e24;
   color: #e5eaee;
@@ -348,24 +348,24 @@ nav {
   color: #191e24;
   background: #e5eaee;
 }
-/* line 283, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 .dark a, .dark i {
   color: #e5eaee;
   background: none;
 }
-/* line 287, ../sass/screen.scss */
+/* line 289, ../sass/screen.scss */
 .dark p.second {
   margin-top: 15% !important;
   opacity: 0;
 }
 
-/* line 293, ../sass/screen.scss */
+/* line 295, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 298, ../sass/screen.scss */
+/* line 300, ../sass/screen.scss */
 .m-b {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
   background-position: 50%;
@@ -376,7 +376,7 @@ nav {
   background-size: cover;
 }
 
-/* line 305, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 .marlene {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
   background-position: 50%;
@@ -387,47 +387,47 @@ nav {
   background-size: cover;
 }
 
-/* line 312, ../sass/screen.scss */
+/* line 314, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
 }
 
-/* line 316, ../sass/screen.scss */
+/* line 318, ../sass/screen.scss */
 .b1 {
   background: url(../img/mb_b-sketch1.png);
 }
 
-/* line 321, ../sass/screen.scss */
+/* line 323, ../sass/screen.scss */
 .b2 {
   background: url(../img/mb_b-sketch2.png);
 }
 
-/* line 326, ../sass/screen.scss */
+/* line 328, ../sass/screen.scss */
 .b3 {
   background: url(../img/mb_b-sketch3b.png);
 }
 
-/* line 331, ../sass/screen.scss */
+/* line 333, ../sass/screen.scss */
 .b4 {
   /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
-/* line 336, ../sass/screen.scss */
+/* line 338, ../sass/screen.scss */
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
-/* line 340, ../sass/screen.scss */
+/* line 342, ../sass/screen.scss */
 .c2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg);
 }
 
-/* line 344, ../sass/screen.scss */
+/* line 346, ../sass/screen.scss */
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 348, ../sass/screen.scss */
+/* line 350, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2, .marlene, .mb {
   background-position: 50%;
   -webkit-background-size: cover;
@@ -438,6 +438,13 @@ nav {
 }
 
 /* line 355, ../sass/screen.scss */
+.fabrica-logo {
+  width: 30%;
+  max-width: 120px;
+  height: auto !important;
+}
+
+/* line 363, ../sass/screen.scss */
 .scroll-container {
   position: absolute;
   height: 80%;
@@ -446,7 +453,7 @@ nav {
   width: 100%;
 }
 
-/* line 364, ../sass/screen.scss */
+/* line 372, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y-rail {
   position: absolute;
   right: 25%;
@@ -454,7 +461,7 @@ nav {
   background-color: rgba(25, 30, 36, 0.1);
   margin-right: -20px;
 }
-/* line 371, ../sass/screen.scss */
+/* line 379, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y {
   position: absolute;
   width: 8px;
