--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -244,18 +244,18 @@ nav a i {
   }
 }
 /* line 188, ../sass/screen.scss */
+.info .container a {
+  text-decoration: underline;
+}
+/* line 190, ../sass/screen.scss */
+.info .container a:hover {
+  text-decoration: none;
+}
+/* line 195, ../sass/screen.scss */
 .info .container .footer {
   font-size: 0.7em;
 }
-/* line 190, ../sass/screen.scss */
-.info .container .footer a {
-  text-decoration: none;
-}
-/* line 192, ../sass/screen.scss */
-.info .container .footer a:hover {
-  text-decoration: underline;
-}
-/* line 196, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .info .container .footer a img {
   height: 20px;
   vertical-align: middle;
@@ -263,7 +263,7 @@ nav a i {
   margin-bottom: 1px;
 }
 
-/* line 213, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
@@ -271,11 +271,11 @@ body {
   font-weight: 400;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-device-pixel-ratio: 1.5), screen and (max-width: 760px) {
-  /* line 213, ../sass/screen.scss */
+  /* line 215, ../sass/screen.scss */
   body {
     font-size: 10px;
   }
-  /* line 223, ../sass/screen.scss */
+  /* line 225, ../sass/screen.scss */
   body nav {
     font-size: 200%;
     /* 
@@ -290,54 +290,54 @@ body {
   }
 }
 
-/* line 242, ../sass/screen.scss */
+/* line 244, ../sass/screen.scss */
 .header h1 {
   font-size: 2.5em;
 }
-/* line 244, ../sass/screen.scss */
+/* line 246, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 251, ../sass/screen.scss */
+/* line 253, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 257, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .dark .container .copy p {
   max-width: 65%;
   font-size: 2.5em;
 }
 
-/* line 262, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 .panel p, .m-b p, .marlene p {
   font-size: 2em;
   line-height: 1.2em;
 }
-/* line 265, ../sass/screen.scss */
+/* line 267, ../sass/screen.scss */
 .panel p i, .m-b p i, .marlene p i {
   font-size: 0.8em;
 }
 
-/* line 270, ../sass/screen.scss */
+/* line 272, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 275, ../sass/screen.scss */
+/* line 277, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 282, ../sass/screen.scss */
+/* line 284, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 286, ../sass/screen.scss */
+/* line 288, ../sass/screen.scss */
 .dark {
   background: #191e24;
   color: #e5eaee;
@@ -352,24 +352,24 @@ nav {
   color: #191e24;
   background: #e5eaee;
 }
-/* line 291, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .dark a, .dark i {
   color: #e5eaee;
   background: none;
 }
-/* line 295, ../sass/screen.scss */
+/* line 297, ../sass/screen.scss */
 .dark p.second {
   margin-top: 15% !important;
   opacity: 0;
 }
 
-/* line 301, ../sass/screen.scss */
+/* line 303, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 306, ../sass/screen.scss */
+/* line 308, ../sass/screen.scss */
 .m-b {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
   background-position: 50%;
@@ -380,7 +380,7 @@ nav {
   background-size: cover;
 }
 
-/* line 313, ../sass/screen.scss */
+/* line 315, ../sass/screen.scss */
 .marlene {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
   background-position: 50%;
@@ -391,47 +391,47 @@ nav {
   background-size: cover;
 }
 
-/* line 320, ../sass/screen.scss */
+/* line 322, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
 }
 
-/* line 324, ../sass/screen.scss */
+/* line 326, ../sass/screen.scss */
 .b1 {
   background: url(../img/mb_b-sketch1.png);
 }
 
-/* line 329, ../sass/screen.scss */
+/* line 331, ../sass/screen.scss */
 .b2 {
   background: url(../img/mb_b-sketch2.png);
 }
 
-/* line 334, ../sass/screen.scss */
+/* line 336, ../sass/screen.scss */
 .b3 {
   background: url(../img/mb_b-sketch3b.png);
 }
 
-/* line 339, ../sass/screen.scss */
+/* line 341, ../sass/screen.scss */
 .b4 {
   /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
-/* line 344, ../sass/screen.scss */
+/* line 346, ../sass/screen.scss */
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
-/* line 348, ../sass/screen.scss */
+/* line 350, ../sass/screen.scss */
 .c2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg);
 }
 
-/* line 352, ../sass/screen.scss */
+/* line 354, ../sass/screen.scss */
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 356, ../sass/screen.scss */
+/* line 358, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2, .marlene, .mb {
   background-position: 50%;
   -webkit-background-size: cover;
@@ -441,14 +441,14 @@ nav {
   background-size: cover;
 }
 
-/* line 361, ../sass/screen.scss */
+/* line 363, ../sass/screen.scss */
 .fabrica-logo {
   width: 30%;
   max-width: 120px;
   height: auto !important;
 }
 
-/* line 369, ../sass/screen.scss */
+/* line 371, ../sass/screen.scss */
 .scroll-container {
   position: absolute;
   height: 80%;
@@ -457,7 +457,7 @@ nav {
   width: 100%;
 }
 
-/* line 378, ../sass/screen.scss */
+/* line 380, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y-rail {
   position: absolute;
   right: 25%;
@@ -465,7 +465,7 @@ nav {
   background-color: rgba(25, 30, 36, 0.1);
   margin-right: -20px;
 }
-/* line 385, ../sass/screen.scss */
+/* line 387, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y {
   position: absolute;
   width: 8px;
