Restored last text displaying in two phases in the same panel - added media query for setting space between panels for small widths

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -297,6 +297,9 @@ nav {
   }
   p.second {
     margin-top: 15% !important;
+    @media screen and (max-width: $break-sm){
+      margin-top: 5% !important;
+    }
     opacity: 0; 
   }
 }
